# xiphos-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: README.md  XiphosBuildTools.cmake  XiphosConfig_h.cmake  XiphosDependencies.cmake  XiphosFlags.cmake  XiphosOptions.cmake  XiphosPackage.cmake  XiphosReport.cmake  XiphosSysChecks.cmake  config.h.cmake.in  xiphos-nav.1.in
cmake/archives/: CMakeLists.first.old.cmake  CONFIG.list  Config_h.cmake  Desktop.cmake  Help.cmake  Help2.cmake  Help3.cmake  Help4.cmake  Install.cmake  Locale.cmake  Scripts.cmake  Scripts.old.cmake  Tools.cmake  config.h.cmake-ref.in  config.h.cmake.in  ifdef.list  xiphos.1.in
desktop/: CMakeLists.txt  xiphos-nav.1.in  xiphos.1.in  xiphos.appdata.xml
help/: CMakeLists.txt  xiphos-C.omf  xiphos-fa.omf  xiphos-fr.omf
help/C/: first_start.page  index.page  introduction.page  launching.page  menubar.page  start.page
mallard/: CMakeLists.txt  Guidelines  xiphos.pot
mallard/C/: index.page  interface.page  introduction.page  legal.xml  start.page  toolbars.page  xiphos-01-introduction.page  xiphos-02-shortcut-keys.page  xiphos-10-start.page  xiphos-11-interface.page  xiphos-20-modules-introduction.page  xiphos-21-modules-configuration.page  xiphos-22-modules-install.page  xiphos-23-modules-maintenance.page  xiphos-24-modules-third-party.page  xiphos-30-search.page  xiphos-31-advanced-search.page  xiphos-32-search-syntax.page  xiphos-33-original-language.page  xiphos-40-personal-commentary.page  xiphos-41-studypad.page  xiphos-42-journals.page  xiphos-50-preferences-general-settings.page  xiphos-51-preferences-biblesync.page  xiphos-52-preferences-fonts-colors.page  xiphos-53-preferences-modules.page  xiphos-60-online-help.page  xiphos.hhc  xiphos.hhk  xiphos.hhp
mallard/fa/: xiphos.hhp
mallard/fr/: fr.po  xiphos.hhp
pixmaps/: CMakeLists.txt
po/: CMakeLists.txt
po/help/: cmake_install.cmake
src/backend/: CMakeLists.txt
src/editor/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/gnome2/: CMakeLists.txt
src/main/: CMakeLists.txt
src/webkit/: CMakeLists.txt
src/xiphos_html/: CMakeLists.txt
ui/: CMakeLists.txt
win32/: CMakeLists.txt
